# light

./: .clang-format  ChangeLog.md  meson.build
include/: helpers.h  light.h
include/impl/: razer.h  sysfs.h  util.h
src/: helpers.c  light.c  main.c  meson.build
src/impl/: razer.c  sysfs.c  util.c
